# barriersampling

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  setup.py
examples/: spike_and_slab.py
src/barriersampling/: __init__.py  barriersampler.py
src/barriersampling_toucan/: __init__.py  barrier_sampling.py
